--- a/netlify.toml
+++ b/netlify.toml
@@ -24,10 +24,14 @@
 
 [redirects]
   # Redirect all routes to the index.html for single-page applications (SPA)
-  [[redirects]]
-    from = "/*"
-    to = "/index.html"
-    status = 200
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+  # Add API redirect for handling routes
+  from = "/api/*"
+  to = "http://localhost:4000/:splat"
+  status = 200
 
 [headers]
   # Add custom headers for caching or security
@@ -37,8 +41,3 @@
       Cache-Control = "public, max-age=31536000, immutable"
       X-Content-Type-Options = "nosniff"
       X-Frame-Options = "DENY"
-
-[[redirects]]
-  from = "/api/*"
-  to = "http://localhost:4000/:splat"
-  status = 200
