--- a/netlify.toml
+++ b/netlify.toml
@@ -18,7 +18,7 @@
   port = 3000
   targetPort = 4000
 
-# Single [headers] block containing all header rules
+# Single [headers] block containing all header rules (Remove duplicates)
 [headers]
   [[headers]]
     for = "/*"
