--- a/netlify.toml
+++ b/netlify.toml
@@ -32,10 +32,10 @@
   to = "http://localhost:4000/:splat"
   status = 200
 
-[headers]
-  [[headers]]
-    for = "/*"
-    [headers.values]
-      Cache-Control = "public, max-age=31536000, immutable"
-      X-Content-Type-Options = "nosniff"
-      X-Frame-Options = "DENY"
+# Headers configuration (root-level block, not inside another block)
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+    X-Content-Type-Options = "nosniff"
+    X-Frame-Options = "DENY"
